--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 /* https://caniuse.com/css-media-range-syntax */
 @media screen and (width >= 600px) {
   :root {
-    --bg-color: orangered;
+    --bg-color: blue;
   }
 }
 
